@@ -16,13 +16,14 @@
 
 	<!-- 资源库 -->
 	<repositories>
+	    <!--  
 		<repository>
 			<id>thirdparty</id>
 			<url>http://192.168.3.185:8180/nexus/content/repositories/thirdparty</url>
 		</repository>
 		<repository>
 			<id>puhuifinance</id>
-			<name>Maven of Puhuifinance.com</name>
+			<name>Maven of cubead.com</name>
 			<url>http://192.168.3.185:8180/nexus/content/groups/public/</url>
 			<releases>
 				<enabled>true</enabled>
@@ -32,6 +33,7 @@
 			</snapshots>
 			<layout>default</layout>
 		</repository>
+		-->
 		<repository>
 			<id>oschina</id>
 			<name>Maven of oschina.net</name>
@@ -109,7 +111,49 @@
 		<upacp-version>1.0.0</upacp-version>
 		<!-- activemq -->
 		<activemq.version>5.7.0</activemq.version>
-
+		
+		<!-- Common libs -->
+		<dubbo_version>2.4.9</dubbo_version>
+		<javassist_version>3.15.0-GA</javassist_version>
+		<netty_version>3.2.5.Final</netty_version>
+		<mina_version>1.1.7</mina_version>
+		<grizzly_version>2.1.4</grizzly_version>
+		<httpclient_version>4.2.1</httpclient_version>
+		<xstream_version>1.4.7</xstream_version>
+		<fastjson_version>1.1.34</fastjson_version>
+		<bsf_version>3.1</bsf_version>
+		<sorcerer_version>0.8</sorcerer_version>
+		<zookeeper_version>3.4.6</zookeeper_version>
+		<zkclient_version>0.1</zkclient_version>
+		<curator_version>1.1.10</curator_version>
+		<jedis_version>2.1.0</jedis_version>
+		<xmemcached_version>1.3.6</xmemcached_version>
+		<cxf_version>2.6.1</cxf_version>
+		<thrift_version>0.8.0</thrift_version>
+		<jfreechart_version>1.0.13</jfreechart_version>
+		<hessian_version>4.0.7</hessian_version>
+		<servlet_version>2.5</servlet_version>
+		<jetty_version>6.1.26</jetty_version>
+		<validation_version>1.0.0.GA</validation_version>
+		<hibernate_validator_version>4.2.0.Final</hibernate_validator_version>
+		<jcache_version>0.4</jcache_version>
+		<sca_version>2.0-M5.1</sca_version>
+		<guice_version>3.0</guice_version>
+		<cglib_version>2.2</cglib_version>
+		<webx_version>3.0.8</webx_version>
+		<!-- Log libs -->
+		<slf4j_version>1.6.2</slf4j_version>
+		<jcl_version>1.1.1</jcl_version>
+		<log4j_version>1.2.16</log4j_version>
+		<logback_version>1.0.6</logback_version>
+		<!-- Test libs -->
+		<junit_version>4.11</junit_version>
+		<easymock_version>3.2</easymock_version>
+		<jmockit_version>0.999.8</jmockit_version>
+		<!-- Build args -->
+		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline>-->
+		<skip_maven_deploy>false</skip_maven_deploy>
+		<updateReleaseInfo>true</updateReleaseInfo>
 	</properties>
 
 	<!-- 单元测试 -->
